stora bokstäver vid reg

--- a/views/share.hbs
+++ b/views/share.hbs
@@ -97,9 +97,9 @@
                 url: "/share",
                 data: {
                     'id' : studentId,
-                    'namn': $('#shareStudentSelect').val()[0].toUpperCase() + $('#shareStudentSelect').val().slice(1),
+                    'namn': $('#shareStudentSelect').val(),
                     'mail': email,
-                    'test': $('#testName').val()[0].toUpperCase() + $('#testName').val().slice(1),
+                    'test': $('#testName').val(),
                     'endDate': selectedTestEndDate
                 },
                 success: function(data){
