Jobbar på PDF och har fixat databasen

--- a/views/PDF.hbs
+++ b/views/PDF.hbs
@@ -34,7 +34,7 @@
 </div>
 <div  id="PDF" >
 
-    <table style="width:80%">
+    <table style="margin-left:60px">
         <thead>
         <th>head1</th><th>head2</th>
         </thead>
