--- a/views/PDF.hbs
+++ b/views/PDF.hbs
@@ -29,38 +29,8 @@
     </div>
 </div>
 
-<div  id="PDF"  >
-    <table  style="text-align: center;" id="PDFtest">
-        <thead>
-
-        <th>head1</th><th>head2</th>
-        </thead>
-        <tbody>
-        <tr>
-           <td>cell1</td>
-            <td>cell2</td>
-        </tr>
-        <tr>
-            <td>cell3</td>
-            <td>cell4</td>
-        </tr>
-        </tbody>
-    </table>
-
-</div>
-
     <script>
-
-    document.getElementById("PDF").style.display = "none";
     $(function() {
-        $('.commentButton').on('click', function() {
-            $(this).parent().find('textarea').toggle();
-        });
-        $(document).on('click', '.panel-heading', function(e) {
-            if(!$(event.target).is('input')) {
-                $(this).next('.panel-body').slideToggle();
-            }
-        });
         var selectedTestId;
         $('#testSelector').on('change', function() {
             var selected = $(this).find(":selected").text();
@@ -75,45 +45,22 @@
                 {{#users}}
                     if('{{userid}}' == selectedTestId){
 
-                        $('#userSelector').append('<option>{{username}}</option>');
+                        $('#userSelector').append('<option class="{{atId}}">{{username}}</option>');
                     }
                 {{/users}}
             }
         });
 
+        $('#createPDF').on('click', function(){
+           $.ajax({
+               url: '/createpdf',
+               method: 'POST',
+               data: {testid: selectedTestId, userid: $('#userSelector').find(':selected').attr('class')},
+               success: function(){
+                   location.replace('/downloadPDF');
+               }
+           })
+        });
     });
-    $('#createPDF').on('click', function() {
-        var pdf = new jsPDF('p', 'pt', 'letter');
-        source = $('#PDF')[0];
-        specialElementHandlers = {
-            '#bypassme': function(element, renderer){
-                return true
-            }
-        }
-        margins = {
-            top: 50,
-            left: 60,
-            width: 545
-
-        };
-        pdf.fromHTML(
-                source // HTML string or DOM elem ref.
-                , margins.left // x coord
-                , margins.top // y coord
-                , {
-                    'width': margins.width // max width of content on PDF
-                    , 'elementHandlers': specialElementHandlers
-                },
-                function (dispose) {
-                    // dispose: object with X, Y of the last line add to the PDF
-                    //          this allow the insertion of new lines after html
-                    pdf.save('html2pdf.pdf');
-                }
-        )
-    })
-
-
-
-
 </script>
 
