--- a/views/partials/_adminNavbar.hbs
+++ b/views/partials/_adminNavbar.hbs
@@ -30,7 +30,7 @@
                         <li><a href="/share">Dela</a></li>
                         <li><a href="/register">Registrera</a></li>
                         <li><a href="/group">Skapa grupp</a></li>
-                        <li><a href="/pdf">Skapa PDF</a></li>
+                        <li><a href="/createpdf">Skapa PDF</a></li>
                     </ul>
                 </li>
             </ul>
