Gjorde klart PDF-grejen
Förlåt Samuel, jag blev så nyfiken när du sa att du inte hade alla
värden så jag tänkte att jag bara skulle kolla på det och... så råkade
jag göra resten. Nåväl.

--- a/views/correcting.hbs
+++ b/views/correcting.hbs
@@ -150,8 +150,10 @@
         data.TestId = $('#testSelector').find(":selected").attr('class');
         data.TakenTestId = $('#userSelector').find(":selected").attr('class');
         data.points = 0;
+        data.updatePoints = [];
         $('.points').each(function(){
             data.points += Number($(this).val());
+            data.updatePoints.push({points: Number($(this).val()), AQId: Number($(this).attr('name'))});
         });
     }
 
