Popover fix och kommentarer

--- a/views/partials/_teacherNavbar.hbs
+++ b/views/partials/_teacherNavbar.hbs
@@ -1,3 +1,5 @@
+<!-- Navbar showing when logged in as teacher -->
+
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
 
