--- a/views/partials/_adminNavbar.hbs
+++ b/views/partials/_adminNavbar.hbs
@@ -1,3 +1,5 @@
+<!-- Navbar showing when logged in as admin -->
+
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
 
