--- a/views/partials/_studentNavbar.hbs
+++ b/views/partials/_studentNavbar.hbs
@@ -1,3 +1,5 @@
+<!-- Navbar showing when logged in as student -->
+
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
 
