--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-//Display different information in index depending on the role the user have
+<!-- Display different information in index depending on the role the user have -->
 {{#if fName}}
     {{#if admin}}
 
