--- a/views/partials/_teacherIndex.hbs
+++ b/views/partials/_teacherIndex.hbs
@@ -9,7 +9,7 @@
         {{/if}}
         <p>Välkommen till testverktyget! Skapa ett anpassat test eller nå verktygets andra funktioner
             genom navigationsmenyn ovan.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Skapa Test »</a></p>
+        <p><a class="btn btn-primary btn-lg" href="/create" role="button">Skapa Test »</a></p>
     </div>
 </div>
 
