--- a/views/partials/_adminNavbar.hbs
+++ b/views/partials/_adminNavbar.hbs
@@ -1,4 +1,4 @@
-<!-- Navbar showing when logged in as admin -->
+<!-- Navbar displayed when logged in as admin -->
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
