--- a/views/partials/_loggedInNavbar.hbs
+++ b/views/partials/_loggedInNavbar.hbs
@@ -1,4 +1,4 @@
-<!-- Showing navbar depending on what role user is -->
+<!-- Relaying user to correct navbar depending on user role -->
 
 {{#if admin}}
     {{>_adminNavbar}}
