--- a/views/partials/_loggedOutNavbar.hbs
+++ b/views/partials/_loggedOutNavbar.hbs
@@ -1,4 +1,4 @@
-<!-- Navbar showing when not logged in -->
+<!-- Navbar displayed when not logged in -->
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
