--- a/views/partials/_teacherNavbar.hbs
+++ b/views/partials/_teacherNavbar.hbs
@@ -1,4 +1,4 @@
-<!-- Navbar showing when logged in as teacher -->
+<!-- Navbar displayed when logged in as teacher -->
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
