--- a/views/test.hbs
+++ b/views/test.hbs
@@ -1,4 +1,4 @@
-<!-- Page showing the test for student -->
+<!-- Page displaying the test for student -->
 
 <div class="col-md-3 pull-right text-center">
     <h2 id="timer"></h2>
