--- a/views/partials/_studentNavbar.hbs
+++ b/views/partials/_studentNavbar.hbs
@@ -1,4 +1,4 @@
-<!-- Navbar showing when logged in as student -->
+<!-- Navbar displayed when logged in as student -->
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
