--- a/views/partials/_adminNavbar.hbs
+++ b/views/partials/_adminNavbar.hbs
@@ -30,7 +30,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Användare<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/share">Dela</a></li>
-                        <li><a href="/register">Registrera</a></li>
+                        <li><a href="/reg">Registrera</a></li>
                         <li><a href="/group">Skapa grupp</a></li>
                         <li><a href="/createpdf">Skapa PDF</a></li>
                     </ul>
