--- a/views/emailInvitation.hbs
+++ b/views/emailInvitation.hbs
@@ -1,6 +1,6 @@
 Hej!
 <br>
-Du har blivit inbjuden att registrera dig på Newtons Testverktyg som {{role}}.
+Du har blivit inbjuden att registrera dig på Newtons Testverktyg.
 Tänk på att inbjudan endast gäller denna mejladress, så du kan inte använda en annan vid registreringen.
 <br><br>
 <a href="http://127.0.0.1:3000/register">Klicka här för att registrera dig</a>
