--- a/views/partials/_teacherNavbar.hbs
+++ b/views/partials/_teacherNavbar.hbs
@@ -5,7 +5,7 @@
 
         <!-- Brand and Navbutton -->
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">{{email}}</a>
+            <a class="navbar-brand" href="/">{{fName}}</a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -16,10 +16,15 @@
         <!-- Collapse Menu -->
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/create">Skapa</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Skapa<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/create">Skapa nytt test</a></li>
+                        <li><a href="/copyMenu">Kopiera test</a></li>
+                    </ul>
+                </li>
                 <li><a href="/editMenu">Redigera</a></li>
                 <li><a href="/statistics">Statistik</a></li>
-                <li><a href="/share">Dela</a></li>
                 <li><a href="/correcting">Rätta prov</a></li>
             </ul>
 
