--- a/views/results.hbs
+++ b/views/results.hbs
@@ -59,11 +59,17 @@
                             </div>
                         </th>
                     </tr>
+
+                    <button type="button" class="btn btn-primary" id="view">Se prov</button>
                 `);
                 // Making text field (teacher comments) read-only
                 $("#textArea").prop("disabled", true);
             }
             {{/tests}}
+        });
+        $(document).on('click', '#view', function(){
+            console.log($('select#testName').attr('id'));
+/*            location.replace('/testResult=' + $('#testName').find(':selected').attr('id'));*/
         });
     });
 </script>
