--- a/views/correctedTest.hbs
+++ b/views/correctedTest.hbs
@@ -2,19 +2,20 @@
     <div class="row">
         <div class="col-xs-6">
             <div class="row"><h1 class="title">Testresultat:</h1></div>
-            <div class="row"><h2 class="title">{{test.FirstName}} {{test.LastName}}</h2></div>
-            <div class="row"><h3 class="title">{{test.ATDate}}</h3></div>
+            <div class="row"><h2 class="title">{{testResult.test.FirstName}} {{testResult.test.LastName}}</h2></div>
+            <div class="row"><h3 class="title">{{testResult.test.ATDate}}</h3></div>
         </div>
         <div class="col-xs-6">
-            <div class="row"><h1 class="title pull-right">{{test.TTitle}}</h1></div>
-            <div class="row"><h2 class="title pull-right">Poäng: {{test.ATPoints}}/{{test.TMaxPoints}}</h2></div>
-            <div class="row"><h3 class="title pull-right">Betyg: {{test.ATGrade}}</h3></div>
+            <div class="row"><h1 class="title">{{testResult.test.TTitle}}</h1></div>
+            <div class="row"><h2 class="title">Poäng: {{testResult.test.ATPoints}}/{{testResult.test.TMaxPoints}}</h2></div>
+            <div class="row"><h3 class="title">Betyg: {{testResult.test.ATGrade}}</h3></div>
         </div>
     </div>
     <hr>
-{{#test.questions}}
+    <div class="col-lg-10 col-lg-offset-1">
+{{#testResult.test.questions}}
         <div class="panel panel-default">
-            <div class="panel-heading"">
+            <div class="panel-heading">
             <h3 class="panel-title">{{Question}}<p class="pull-right">{{this.answeredQuestion.AQPoints}}/{{this.QPoints}}</p></h3>
         </div>
         <div class="panel-body">
@@ -42,18 +43,19 @@
             </div>
     {{/if}}
     </div>
-{{/test.questions}}
-{{#if test.testComment}}
+{{/testResult.test.questions}}
+</div>
+{{#if testResult.test.testComment}}
+    <div class="col-lg-10 col-lg-offset-1">
     <div class="panel panel-default">
-        <div class="panel-heading"">
+        <div class="panel-heading">
         <h3 class="panel-title">Lärarens kommentar</h3>
     </div>
     <div class="panel-body">
-        {{test.testComment.TestComment}}
+        {{testResult.test.testComment.TestComment}}
+    </div>
     </div>
     </div>
 {{/if}}
 </div>
-<style>body{font-size: 175%}.panel-title{font-size:150%}.container{margin: 20px 40px}</style>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>$('h4[name="Öppen fråga"]').parent().remove()</script>
