--- a/views/share.hbs
+++ b/views/share.hbs
@@ -8,23 +8,20 @@
             </div>
         </div>
         <hr>
-                <!-- Test selection -->
-                <form action="" method="get">
-                    <select name="test" id="testName" class="form-control">
-                        {{#each tests}}
-                            <option class="{{this.TestId}}">{{this.TTitle}}</option>
-                        {{/each}}
-                    </select>
-                </form>
-
-
-            <!-- Group/student selection -->
-            <select name="share" id="shareSelect" class="form-control">
-                <option value="">Dela till grupp/elev</option>
-                <option value="group" id="group">Dela till grupp</option>
-                <option value="student" id="student">Dela till elev</option>
+        <!-- Test selection -->
+        <form action="" method="get">
+            <select name="test" id="testName" class="form-control">
+                {{#each tests}}
+                    <option class="{{this.TestId}}">{{this.TTitle}}</option>
+                {{/each}}
             </select>
         </form>
+        <!-- Group/student selection -->
+        <select name="share" id="shareSelect" class="form-control">
+            <option value="">Dela till grupp/elev</option>
+            <option value="group" id="group">Dela till grupp</option>
+            <option value="student" id="student">Dela till elev</option>
+        </select>
     </div>
 </div>
 
@@ -32,9 +29,9 @@
 <div class="container collapse" id="shareGroupContainer">
     <div class="col-md-4 col-md-offset-4">
         <h3 class="page-header">Välj grupp</h3>
-            <select name="share" id="shareGroupSelect" class="form-control"></select>
-            <br>
-            <button type="button" class="btn btn-info btn-block registerButton" >Dela till grupp</button>
+        <select name="share" id="shareGroupSelect" class="form-control"></select>
+        <br>
+        <button type="button" class="btn btn-info btn-block registerButton" >Dela till grupp</button>
     </div>
 </div>
 
@@ -42,9 +39,9 @@
 <div class="container collapse" id="shareStudentContainer">
     <div class="col-md-4 col-md-offset-4">
         <h3 class="page-header">Välj elev</h3>
-            <select name="share" id="shareStudentSelect" class="form-control"></select>
-            <br>
-            <button id="shareStudent" class="btn btn-info btn-block registerButton">Dela till elev</button>
+        <select name="share" id="shareStudentSelect" class="form-control"></select>
+        <br>
+        <button id="shareStudent" class="btn btn-info btn-block registerButton">Dela till elev</button>
     </div>
 </div>
 
@@ -58,6 +55,7 @@
     var selectedTestEndDate;
     var currentTest;
 
+    //Event on buttonclick, posts relevant User and Test data
     $( ".registerButton").on( "click", function(event) {
         {{#tests}}
             if('{{this.TTitle}}' == $('#testName').val()){
@@ -78,7 +76,7 @@
                     emails.push('{{this.Mail}}');
                 }
             {{/groupdetails}}
-            console.log(studentIds + names + emails);
+
             $.ajax({
                 type: 'POST',
                 url: "/share",
@@ -120,8 +118,6 @@
         }
     });
 
-</script>
-<script>
     // Displays sub-selections when group/student selection is made
     $(function() {
         $("#shareSelect").change(function() {
