--- a/views/correctedTest.hbs
+++ b/views/correctedTest.hbs
@@ -1,22 +1,32 @@
 <div class="container">
     <div class="row">
-        <div class="col-xs-6">
-            <div class="row"><h1 class="title">Testresultat:</h1></div>
-            <div class="row"><h2 class="title">{{testResult.test.FirstName}} {{testResult.test.LastName}}</h2></div>
-            <div class="row"><h3 class="title">{{testResult.test.ATDate}}</h3></div>
-        </div>
-        <div class="col-xs-6">
-            <div class="row"><h1 class="title">{{testResult.test.TTitle}}</h1></div>
-            <div class="row"><h2 class="title">Poäng: {{testResult.test.ATPoints}}/{{testResult.test.TMaxPoints}}</h2></div>
-            <div class="row"><h3 class="title">Betyg: {{testResult.test.ATGrade}}</h3></div>
+        <div class="col-lg-8 col-lg-offset-2">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <div><h1><span class="label label-default">{{testResult.test.TTitle}}</span></h1><p>Inlämnat: {{testResult.test.ATDate}}</p></div>
+                </div>
+                <div class="panel-body">
+                    <div class="col-xs-4">
+                        <div class="row"><h2 class="title"><span class="label label-default">Namn:</span></h2></div>
+                        <h4 class="title"> {{testResult.test.FirstName}} {{testResult.test.LastName}}</h4>
+                    </div>
+                    <div class="col-xs-4">
+                        <div class="row"><h2 class="title"><span class="label label-default">Poäng:</span></h2></div>
+                        <h4 class="title"> {{testResult.test.ATPoints}}/{{testResult.test.TMaxPoints}}</h4>
+                    </div>
+                    <div class="col-xs-4">
+                        <div class="row"><h2 class="title"><span class="label label-default">Betyg:</span></h2></div>
+                        <h4 class="title"> {{testResult.test.ATGrade}}</h4>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <hr>
     <div class="col-lg-10 col-lg-offset-1">
 {{#testResult.test.questions}}
         <div class="panel panel-default">
             <div class="panel-heading">
-            <h3 class="panel-title">{{Question}}<p class="pull-right">{{this.answeredQuestion.AQPoints}}/{{this.QPoints}}</p></h3>
+                <h3 class="panel-title">{{Question}}<p class="pull-right">{{this.answeredQuestion.AQPoints}}/{{this.QPoints}}</p></h3>
         </div>
         <div class="panel-body">
             <div class="col-xs-6">
@@ -58,4 +68,5 @@
     </div>
 {{/if}}
 </div>
+<style>.label{padding:6px;}</style>
 <script>$('h4[name="Öppen fråga"]').parent().remove()</script>
